Sat Jan 11 10:58:54 2003  Joern Thyssen  <jth@gnubg.org>

	* rollout.c (BasicCubefulRollout): fix bug for bearoff truncation
	of cubeful rollouts.

Fri Jan 10 22:56:30 2003  Joern Thyssen  <jth@gnubg.org>

	* eval.c (FindBestMovePlied, FindnSAveBestMoves):
	change algorithm for accept=0 according to Michael
	Depreli's suggestions.

Fri Jan 10 19:48:24 2003  Joern Thyssen  <jth@gnubg.org>

	* boards.xml: add Michael Depreli's designs.

Fri Jan 10 19:42:38 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (EvalCHanged): fix bug when comparing to
	predefined settings.
	(reported by Scott Steiner)

Fri Jan 10 19:18:59 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c: new command "show fullboard" that also shows
	the cube, dice etc.
	* show.c (CommandShowFullBoard): new function.

	* gtkchequer.c (ShowMove, MoveListMove): use new command.

Fri Jan 10 19:12:01 2003  Joern Thyssen  <jth@gnubg.org>

	* eval.c (EvaluatePositionCubeful3): cache cubeful evaluations
	going through EvaluatePositionCubeful3.

Fri Jan 10 10:34:18 2003  Gary Wong  <gtw@gnu.org>

	* gnubg.c (CommandImportBKG): New function.  Import sessions saved
	by Hans Berliner's BKG.
	* gtkgame.c (ImportBKG): New function.
	* import.c (ImportBKGGame): New function.

Fri Jan 10 15:10:20 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* rollout.c: Fix incorrect accumulating of rollout results for
	cubeless + bearoff truncation.

Thu Jan  9 10:39:48 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* bearoff.c: fix bug with setting of ausProb and ausGammonProb

Thu Jan  9 21:48:05 2003  Joern Thyssen  <jth@gnubg.org>

	* set.c (CommandSetRolloutBearoffTruncationOS): fix typo.
	(reported by Joseph Heled)

Thu Jan  9 17:42:39 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkchequer.c (MoveListShow): modify logic according to
	Albert Silvers suggestions.

Thu Jan  9 16:33:19 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkchequer.c (MoveListMove): show board after move.
	(suggested by Nardy Pillards)
